--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,8 +23,8 @@
   --large-font-size: 3rem;
   --h1-font-size: 1.8rem;
   --medium-font-size: 1.125rem;
-  --normal-font-size: .938rem;
-  --tiny-font-size: .625rem;
+  --normal-font-size: 0.938rem;
+  --tiny-font-size: 0.625rem;
 
   /*========= Font weight =========*/
   --font-extra-light: 200;
@@ -34,7 +34,7 @@
   --font-bold: 700;
 
   /*===== Margenes =====*/
-  --mb-1: .5rem;
+  --mb-1: 0.5rem;
   --mb-2: 1rem;
   --mb-3: 1.5rem;
   --mb-4: 2rem;
@@ -44,13 +44,13 @@
   --z-fixed: 100;
 }
 
-@media screen and (min-width: 768px){
-  :root{
+@media screen and (min-width: 768px) {
+  :root {
     --large-font-size: 4.5rem;
     --h1-font-size: 3rem;
     --medium-font-size: 1.3rem;
     --normal-font-size: 1rem;
-    --tiny-font-size: .813rem;
+    --tiny-font-size: 0.813rem;
   }
 }
 
@@ -118,9 +118,9 @@ img {
   left: 0;
   width: 100%;
   background-color: var(--body-color-alt);
-  box-shadow: 0 1px 12px rgba(0, 0, 0, 0.10);
+  box-shadow: 0 1px 12px rgba(0, 0, 0, 0.1);
   z-index: var(--z-fixed);
-  transition: .4s;
+  transition: 0.4s;
 }
 
 /*=============== NAV ===============*/
@@ -147,18 +147,18 @@ img {
     bottom: 0;
     left: 0;
     background-color: var(--body-color-alt);
-    box-shadow: 0 -1px 12px rgba(0, 0, 0, 0.10);
+    box-shadow: 0 -1px 12px rgba(0, 0, 0, 0.1);
     width: 100%;
     height: 4rem;
     padding: 0 1rem;
     display: grid;
     align-content: center;
     border-radius: 1.25rem 1.25rem 0 0;
-    transition: .4s;
+    transition: 0.4s;
   }
 }
 
-.nav__list, 
+.nav__list,
 .nav__link {
   display: flex;
 }
@@ -195,16 +195,16 @@ img {
   top: 7rem;
   right: 1rem;
   background-color: var(--body-color-alt);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, .1);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   display: grid;
-  row-gap: .25rem;
+  row-gap: 0.25rem;
   padding: 1rem 1.25rem;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
   z-index: var(--z-tooltip);
-  transform: translateY(-.75rem);
+  transform: translateY(-0.75rem);
   opacity: 0;
   pointer-events: none;
-  transition: transform .4s, opacity .4s;
+  transition: transform 0.4s, opacity 0.4s;
 }
 
 .dropdown__link {
@@ -212,8 +212,8 @@ img {
   display: flex;
   align-items: center;
   column-gap: 1rem;
-  padding: .25rem 1.5rem .25rem .5rem;
-  border-radius: .25rem;
+  padding: 0.25rem 1.5rem 0.25rem 0.5rem;
+  border-radius: 0.25rem;
 }
 
 .dropdown__link i {
@@ -221,7 +221,7 @@ img {
 }
 
 .dropdown__link span {
-  font-size: var(--tiny-font-size);;
+  font-size: var(--tiny-font-size);
 }
 
 .dropdown__link:hover {
@@ -251,7 +251,7 @@ img {
 .home {
   /* position: relative; */
   overflow: hidden;
-    /* height: calc(100vh - var(--header-height)); */
+  /* height: calc(100vh - var(--header-height)); */
 }
 
 .home__container {
@@ -337,7 +337,7 @@ img {
 /*===== CAROUSEL SLIDER =====*/
 .slider {
   margin-top: 2rem;
-  /* margin-bottom: 25px; */ 
+  /* margin-bottom: 25px; */
   padding: 0 25px;
   cursor: grab;
 }
@@ -371,7 +371,6 @@ img {
   font-size: var(--regular-font-size);
   font-weight: var(--font-regular);
   cursor: pointer;
-
 }
 
 .slider__play {
@@ -395,12 +394,19 @@ img {
   font-weight: var(--font-regular);
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.slider__username,
+.slider__album-name {
+  text-overflow: ellipsis;
+  white-space: nowrap;
   overflow: hidden;
 }
 
 /*===== ARTISTS SECTION =====*/
 .artists {
   background-color: var(--body-color-alt);
+  text-align: center;
 }
 
 /* .artists__text {
@@ -435,7 +441,7 @@ img {
   width: 150px;
   height: 150px;
   border-radius: 54% 46% 54% 46% / 43% 59% 41% 57%;
-  background: var(--first-color) url("./assets/img/listener.png");
+  background: var(--first-color) url('./assets/img/listener.png');
   background-position: center;
   background-size: 107%;
   transition: all 0.5s ease;
@@ -469,8 +475,8 @@ img {
 }
 
 .trending-username {
-  font-size: var(--tiny-font-size); 
- }
+  font-size: var(--tiny-font-size);
+}
 
 /* ===== FOOTER=====*/
 .footer1__container {
@@ -518,19 +524,19 @@ img {
   right: 1rem;
   bottom: -50%;
   background-color: var(--white-color);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, .1);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   display: inline-flex;
-  padding: .35rem;
-  border-radius: .25rem;
+  padding: 0.35rem;
+  border-radius: 0.25rem;
   font-size: 1.1rem;
   color: var(--first-color);
   z-index: var(--z-tooltip);
   cursor: pointer;
-  transition: bottom .3s, transform .3s, background .4s;
+  transition: bottom 0.3s, transform 0.3s, background 0.4s;
 }
 
 .scrollup:hover {
-  transform: translateY(-.25rem);
+  transform: translateY(-0.25rem);
 }
 
 .show-scroll {
@@ -552,7 +558,6 @@ img {
 ::-webkit-scrollbar-thumb:hover {
   background-color: ;
 } */
-
 
 /*=============== MEDIA QUERIES ===============*/
 /* For small devices */
@@ -629,6 +634,6 @@ img {
 /* For tall screens on mobiles and desktop*/
 @media screen and (min-height: 721px) {
   .home__container {
-      height: 576px;
-  }  
+    height: 576px;
+  }
 }
