--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -98,8 +98,12 @@ a {
   text-decoration: none;
 }
 
+input,
+select,
+textarea,
 button {
   border: none;
+  outline: none;
   font-family: var(--body-font);
 }
 
@@ -540,28 +544,6 @@ img {
   min-height: calc(100vh - var(--header-height));
 }
 
-/* .upload__wrapper {
-  border-radius: 1rem;
-  border: 2px solid var(--body-color-alt);
-  padding: 2rem;
-  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.1);
-}
-
-.upload__wrapper-top {
-  display: flex;
-  gap: 2rem;
-}
-
-.upload__icon-circle {
-  width: 3rem;
-  height: 3rem;
-  border-radius: 50%;
-  border: 2px solid var(--first-color);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
-
 .upload__drag-and-drop {
   border-radius: 1rem;
   border: 2px dashed var(--first-color);
@@ -612,6 +594,100 @@ img {
   background-color: var(--body-color-alt);
   padding: 1rem 2rem;
   margin-bottom: 1rem;
+}
+
+.album__form {
+  background-color: var(--body-color-alt);
+  border-radius: 1rem;
+  margin-bottom: 1rem;
+  padding: 4rem;
+  display: grid;
+  gap: 4rem;
+}
+
+.album_form-top {
+  display: flex;
+  gap: 4rem;
+}
+
+.album__form-bottom {
+  text-align: center;
+}
+
+.album_form-top-inputs {
+  flex: 2;
+}
+
+.album_form-bottom {
+  display: block;
+  width: 100%;
+}
+
+.album__image {
+  width: 300px;
+  height: 300px;
+  border: 2px solid var(--third-color);
+  border-radius: 1rem;
+}
+
+.album__group {
+  width: 100%;
+}
+
+.album__label {
+  display: block;
+  text-align: left;
+  margin-bottom: 0.5rem;
+  font-size: var(--small-font-size);
+  font-weight: var(--font-semi-bold);
+}
+
+.album__input {
+  width: 100%;
+  outline: 1px solid var(--third-color);
+  background-color: transparent;
+  border-radius: 0.25rem;
+  margin-bottom: 1.5rem;
+  padding: 0.5rem 1rem;
+  color: var(--white-color);
+}
+
+.album__select {
+  width: 60%;
+  cursor: pointer;
+}
+
+.album__select option {
+  background-color: var(--body-color);
+  border: none;
+}
+
+.album__select option:focus {
+  background-color: var(--body-color-alt);
+}
+
+.album__textarea {
+  resize: none;
+  overflow: hidden;
+}
+
+.album__input:focus,
+.album__select:focus,
+.album__select:focus {
+  outline: 2px solid var(--first-color);
+}
+
+.album__button {
+  background-color: var(--first-color);
+  color: var(--white-color);
+  border-radius: 1rem;
+  padding: 0.6rem 3rem;
+  cursor: pointer;
+  font-size: var(--normal-font-size);
+}
+
+.album__button:hover {
+  background-color: var(--first-color-alt-light);
 }
 
 /*=============== LOGIN & REGISTER ===============*/
@@ -721,7 +797,7 @@ img {
   border: none;
   outline: none;
   color: var(--white-color);
-  font-size: var(--regular-font-size);
+  font-size: var(--normal-font-size);
   font-weight: var(--font-light);
 }
 
@@ -768,7 +844,7 @@ img {
 
 .form__have-account-text {
   margin-top: 1rem;
-  font-size: var(--regular-font-size);
+  font-size: var(--normal-font-size);
 }
 
 .form__policy-info--underline {
