--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -132,6 +132,37 @@ img {
 .container {
   max-width: 968px;
   padding: 0 2rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/*=============== ERROR MESSAGE ===============*/
+.error-message {
+  position: fixed;
+  top: 8rem;
+  right: 3rem;
+  background-color: var(--body-color-alt);
+  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.2);
+  outline: 1px solid rgb(196, 29, 0);
+  font-size: var(--tiny-font-size);
+  z-index: var(--z-tooltip);
+  padding: 0.75rem 2rem;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  opacity: 1;
+  transition: opacity 2s ease-out;
+  /* transition: all 0.25s ease-out; */
+}
+
+.error-message i {
+  font-size: 1.75rem;
+}
+
+.error-message:hover {
+  box-shadow: 0 0 0.7rem rgb(221, 33, 0);
 }
 
 /*=============== HEADER ===============*/
@@ -845,8 +876,8 @@ img {
 /* For large devices */
 @media screen and (min-width: 1024px) {
   .container {
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
     padding: 0;
   }
   .home__container {
