--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -438,6 +438,8 @@ img {
 .slider__card {
   padding: 1rem 1.2rem;
   border-radius: 0.7rem;
+  display: flex;
+  align-items: center;
 }
 
 .slick-slider .slick-slide {
@@ -450,7 +452,11 @@ img {
 
 .slider__image {
   border-radius: 50%;
+  background-size: cover;
+  background-color: var(--first-color);
   cursor: pointer;
+  aspect-ratio: 1 / 1;
+  width: 100%;
 }
 
 .slider__card-bottom {
