--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -189,7 +189,7 @@ h2 {
   outline: 1px solid var(--third-color);
   box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.2);
   font-size: var(--tiny-font-size);
-  z-index: var(--z-tooltip);
+  z-index: var(--z-fixed);
   padding: 0.75rem 2rem;
   border-radius: 0.25rem;
   cursor: pointer;
@@ -664,6 +664,7 @@ h2 {
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  z-index: var(--z-tooltip);
 }
 
 .image-container {
