--- a/frontend/src/pages/Search.css
+++ b/frontend/src/pages/Search.css
@@ -9,9 +9,13 @@
   padding: 1rem 2rem; */
 }
 
-.search__field {
+/*========== SEARCH INPUT ==========*/
+.search__top-container {
   max-width: 600px;
-  margin: 0 auto 2rem auto;
+  margin: 0 auto 3rem auto;
+}
+
+.search__field {
   background-color: var(--body-color-alt);
   outline: 1px solid var(--third-color);
   border-radius: 0.25rem;
@@ -20,6 +24,7 @@
   align-items: center;
   position: relative;
   transition: box-shadow 0.3s ease-out;
+  margin-bottom: 1rem;
 }
 
 .search__field:focus-within {
@@ -52,26 +57,73 @@
   font-size: var(--tiny-font-size);
 }
 
+.search__buttons-list {
+  margin: 0 auto;
+  width: 300px;
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+.search__type-button {
+  flex: 1;
+  background-color: var(--third-color);
+  border-radius: 0.25rem;
+  padding: 0.5rem 1rem;
+  font-size: var(--tiny-font-size);
+  text-align: center;
+  transition: 0.2s all ease-out;
+}
+
+.search__type-button:hover {
+  background-color: rgb(110, 99, 95);
+}
+
+.search__type-button.search__type-button--active {
+  background-color: var(--first-color);
+}
+
+/*========== RESULTS LIST ==========*/
+.search__title {
+  text-align: center;
+  font-size: var(--h2-font-size);
+  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  margin-bottom: 1.5rem;
+}
+
+.search__text {
+  text-align: center;
+}
+
 .search__list-l {
+  /* text-align: center; */
 }
 
 .search__list {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, 180px);
-  gap: 1rem 0;
+  grid-template-columns: repeat(auto-fit, 120px);
+  justify-content: center;
+  gap: 0.5rem 0;
+}
+
+.search__item-l {
+  width: 120px;
+  height: 140px;
+  /* background-color: var(--body-color-alt); */
+  overflow: hidden;
+  border-radius: 0.7rem;
+  display: flex;
+  align-items: center;
+  transition: all 0.1s ease-out;
 }
 
 .search__item {
-  width: 180px;
-  height: 210px;
-  /* background-color: var(--body-color-alt); */
+  width: 100%;
   padding: 1rem 1.2rem;
-  border-radius: 0.7rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  transition: all 0.1s ease-out;
 }
 
 .search__item-top {
@@ -79,8 +131,14 @@
 }
 
 .search__item-bottom {
+  max-width: 100%;
   text-align: center;
   margin-top: 1rem;
+  color: (var(--white-color));
+  font-size: var(--tiny-font-size);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .search__image {
@@ -101,14 +159,37 @@
 
 /*=============== MEDIA QUERIES ===============*/
 /* For small devices */
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 400px) {
+  .search__buttons-list {
+    max-width: 100%;
+  }
+  .search__buttons-list span {
+    display: none;
+  }
 }
 
 /* For medium devices */
 @media screen and (min-width: 576px) {
+  .search__list {
+    grid-template-columns: repeat(auto-fit, 160px);
+  }
+  .search__item-l {
+    width: 130px;
+    height: 150px;
+  }
+  .search__item-bottom {
+    font-size: var(--normal-font-size);
+  }
 }
 
 @media screen and (min-width: 767px) {
+  .search__list {
+    grid-template-columns: repeat(auto-fit, 160px);
+  }
+  .search__item-l {
+    width: 160px;
+    height: 180px;
+  }
 }
 
 /* For large devices */
